<resources>
    <string name="app_name">锦客手机端</string>
    <string name="noauthoriry">对不起。您没有权限</string>
    <string name="offlineuser">您是离线用户. 您只有利用规章查询功能.</string>
    <string name="pdfreadererror">本手机上PDF阅读器没安装了\n 您得安装PDF阅读器吧</string>
    <string name="exitapp">再按一次退出程序</string>
    <string name="network_error">网通讯错误</string>
    <string name="waiting">稍等一下。。。</string>
    <string name="jizhumima">记住密码</string>
    <string name="denglu">登录</string>
    <string name="ganbukaohe">干部考核</string>
    <string name="gongwenliuzhuan">公文流转</string>
    <string name="renwuguanli">任务管理</string>
    <string name="guizhangchaxun">规章查询</string>
    <string name="zaixiankaoshi">在线考试</string>
    <string name="zhigongsuqiu">职工诉求</string>
    <string name="wodexinxi">我的信息</string>
    <string name="tongxunlu">通讯录</string>
    <string name="kaohechaxun">考核查询</string>
    <string name="youxiangchaxun">邮箱查询</string>
    <string name="jinkexinxipingtai">锦客信息平台</string>
    <string name="kaoheluru">考核录入</string>
    <string name="jianchariqi">检查日期</string>
    <string name="xuanzekeshi">选择科室</string>
    <string name="xuanzekeshi1">选择科室 ：</string>
    <string name="cheduixuanze">选择车队</string>
    <string name="cheduixuanze1">选择车队 ：</string>
    <string name="banzuxuanze">选择班组</string>
    <string name="banzuxuanze1">选择班组 ：</string>
    <string name="fuzeren">负责人</string>
    <string name="chuchengriqi">出乘日期</string>
    <string name="xiangdianxuanze">选择项点</string>
    <string name="kaohefenxi">考核分析</string>
    <string name="yulan">预览</string>
    <string name="xiangdian">项点</string>
    <string name="qishiriqi">起始日期</string>
    <string name="jieshuriqi">结束日期</string>
    <string name="chaxun">查询</string>
    <string name="bumenxuanze">选择部门</string>
    <string name="bumenxuanze1">选择部门 ：</string>
    <string name="renyuanxuanze">选择人员</string>
    <string name="renyuanxuanze1">选择人员 ：</string>
    <string name="chaxunjieguo">查询结果</string>
    <string name="wenti">问题 ：</string>
    <string name="banzu">班组 ：</string>
    <string name="bumen">部门 ：</string>
    <string name="fuzerenSel">负责人 ：</string>
    <string name="koufen">扣分 ：</string>
    <string name="jianfen">减分 ：</string>
    <string name="fuzeliechezhang">负责列车长 ：</string>
    <string name="kaohexiangxi">考核详细</string>
    <string name="chakan">查看</string>
    <string name="gongwenbiaoti">公文标题 ：</string>
    <string name="gongwenbiaoti1">公文标题</string>
    <string name="fabubumen">发布部门 ：</string>
    <string name="fabushijian">发布时间 ：</string>
    <string name="fabushijian1">发布时间</string>
    <string name="shouxinren">收信人 ：</string>
    <string name="tongzhihao">通知号 ：</string>
    <string name="tongzhihao1">通知号</string>
    <string name="fujian">附件 ：</string>
    <string name="chakanxiangqing">查看详情</string>
    <string name="liuzhuan">流转</string>
    <string name="xiayiye">下一页</string>
    <string name="shangyiye">上一页</string>
    <string name="keshi">科室</string>
    <string name="chedui">车队</string>
    <string name="liechezhang">列车长</string>
    <string name="gongwendaiqian">公文待签</string>
    <string name="gongwenfabu">公文发布</string>
    <string name="yishougongwen">已收公文</string>
    <string name="gongwenchaxun">公文查询</string>
    <string name="gongwenxiangqing">公文详情</string>
    <string name="liuzhuanren">流转人 ：</string>
    <string name="liuzhuanshijian">流转时间 ：</string>
    <string name="gongwenneirong">公文内容 ：</string>
    <string name="liuzhuanrenpishi">流转人批示 ：</string>
    <string name="qianshou">签收</string>
    <string name="xiazai">下载</string>
    <string name="dakai">打开</string>
    <string name="shangchuan">上传</string>
    <string name="xuanzejibie">选择级别 ：</string>
    <string name="xuanzejibie1">选择级别</string>
    <string name="tianjiashouxinren">添加收信人</string>
    <string name="tianjiafujian">添加附件</string>
    <string name="tianjiatupian">添加图片</string>
    <string name="biaoti1">标题 ：</string>
    <string name="biaoti">标    题</string>
    <string name="querenfabu">确认发布</string>
    <string name="piyueshijian">批阅时间 ：</string>
    <string name="faburen">发布人</string>
    <string name="faburen1">发布人 ：</string>
    <string name="tianjiaxinrenwu">添加新任务</string>
    <string name="shifouwancheng">是否完成 ：</string>
    <string name="weiwancheng">未完成</string>
    <string name="yiwancheng">已完成</string>
    <string name="zhixingzhong">执行中</string>
    <string name="jieshouzhong">接受中</string>
    <string name="youfujian">有附件</string>
    <string name="xianzaijinxing">现在进行</string>
    <string name="renwumingcheng">任务名称 ：</string>
    <string name="renwumingcheng1">任务名称</string>
    <string name="kaishishijian">开始时间 ：</string>
    <string name="jieshushijian">结束时间 ：</string>
    <string name="zhixingrenliebiao">执行人列表 ：</string>
    <string name="renwuneirong">任务内容 ：</string>
    <string name="renwuyulan">任务预览</string>
    <string name="zerenren">责任人 ：</string>
    <string name="zerenren1">责任人</string>
    <string name="tianjiazhaopian">添加照片</string>
    <string name="liangualiechezhang">联挂列车长</string>
    <string name="liangualiechezhang1">联挂列车长 ：</string>
    <string name="faburenwu">发布任务</string>
    <string name="jiedaorenwu">接到任务</string>
    <string name="guizhang">规章</string>
    <string name="guizhangxinxi">规章信息</string>
    <string name="tianjiatongxunlu">添加通讯录</string>
    <string name="xingming">姓\u0020\u0020\u0020名</string>
    <string name="zhiwu">职\u0020\u0020\u0020务</string>
    <string name="suoshuduanji">所属段级</string>
    <string name="suoshuchedui">所属车队</string>
    <string name="suoshulieche">所属列车</string>
    <string name="suoshubanzu">所属班组</string>
    <string name="querentianjia">确认添加</string>
    <string name="quxiaotianjia">取消添加</string>
    <string name="kaoheyulan">考核预览</string>
    <string name="STR_BUMEN">部门</string>
    <string name="STR_CHEDUI">车队</string>
    <string name="STR_DUANJI">段级</string>
    <string name="duanjikaoshi">段级考试</string>
    <string name="cheduikaoshi">车队考试</string>
    <string name="kaoshifenxi">考试分析</string>
    <string name="kaoshibiaoti">考试标题 ：</string>
    <string name="kaoshishijian">考试时间 ：</string>
    <string name="kaotishu">考题数 ：</string>
    <string name="kaotineirong">考题内容 ：</string>
    <string name="kaishikaoshi">开始考试</string>
    <string name="shengxiashijian">剩下时间 ：</string>
    <string name="shangyiti">上一题</string>
    <string name="xiayiti">下一题</string>
    <string name="tijiao">提交</string>
    <string name="zaixiankaohe">在线考核</string>
    <string name="zaixiankaohe_hint">恭喜您，考试结束了\n您的考试成绩是如下</string>
    <string name="tijiaoshijian">提交时间 ：</string>
    <string name="zongkaoti">总考题 ：</string>
    <string name="zongdaduiti">总答对题 ：</string>
    <string name="danxuanti">单选题 ：</string>
    <string name="duoxuanti">多选题 ：</string>
    <string name="panduanti">判断题 ：</string>
    <string name="daduiti">答对题 ：</string>
    <string name="chakancuowuxiangqing">查看错误详情</string>
    <string name="kaoti">考题 ：</string>
    <string name="kaoti1">考题</string>
    <string name="zhengquedaan">正确答案 ：</string>
    <string name="nindedaan">您的答案 ：</string>
    <string name="shiti">试题 ：</string>
    <string name="zhengquetishu">正确题数 ：</string>
    <string name="wodechengji">我的成绩 ：</string>
    <string name="gong">共</string>
    <string name="geti">个题</string>
    <string name="kaoshilishi">考试历史</string>
    <string name="bumenyouxiang">部门邮箱</string>
    <string name="shuruneirong">请输入内容</string>
    <string name="querenfasong">确认发送</string>
    <string name="suqiuhint1"><b>一、</b>“锦州客运段职工诉求中心”在24小时接收职工的咨询、意见建议和举报投诉。本系统为实名制登陆进行诉求信息发布，要求职工发布诉求必须本着实事求是，不得恶意捏造或者歪曲事实，散布谣言；公开侮辱他人、捏造事实诽谤他人或者恶意攻击他人。</string>
    <string name="suqiuhint2"><b>二、</b>诉求件办理时限:</string>
    <string name="suqiuhint3">1、咨询类诉求件：自段及车队接收到职工诉求信息之日起，在3个工作日内给予回复；\n 2、 投诉、举报、建议及感谢类诉求件：自段及车队接收到职工诉求信息之日起，在7个工作日内给予回复。 <br /></string>
    <string name="fenzhong">分钟</string>
    <string name="fanhui">返回</string>
    <string name="miao">秒</string>
    <string name="examtimeout">考试时间超时</string>
    <string name="dataerror">数据错误</string>
    <string name="danxuanti1">单选题</string>
    <string name="duixuanti1">多选题</string>
    <string name="panduanti1">判断题</string>
    <string name="download_success">下载成功</string>
    <string name="download_fail">下载失败</string>
    <string name="renwuxiangqing">任务详情</string>
    <string name="xiazaifujian">下载附件</string>
    <string name="baogaoqingkuang">报告情况</string>
    <string name="baogao">报告</string>
    <string name="zhixing">执行</string>
    <string name="wancheng">完成</string>
    <string name="shurubaogao">请输入报告内容</string>
    <string name="fasongriqi">发送日期 ：</string>
    <string name="shoujianren">收件人 ：</string>
    <string name="faziyouxiang">发自邮箱</string>
    <string name="xiexin">写信</string>
    <string name="xuanzelianxiren">选择联系人</string>
    <string name="fasong">发送</string>
    <string name="please_insert_userid">请输入用户名</string>
    <string name="please_insert_password">请输入密码</string>
    <string name="xuanze_chedui">请选择车队</string>
    <string name="xuanze_banzu">请选择班组</string>
    <string name="xuanze_zerenren">请选择责任人</string>
    <string name="xuanze_xiangdian">请选择项点</string>
    <string name="shuru_kaoheshuju">请输入考核数据</string>
    <string name="param_error">参数错误</string>
    <string name="service_error">服务器错误</string>
    <string name="service_success">操作成功</string>
    <string name="noexist_data">此数据不存在</string>
    <string name="xuanze_shouxinren">请选择收信人</string>
    <string name="shuru_biaoti">请输入标题</string>
    <string name="shuru_tongzhihao">请输入通知号</string>
    <string name="shuru_fabuneirong">请输入发布内容</string>
    <string name="fileselecterror">附件选择错误</string>
    <string name="caozuochenggong">操作成功</string>
    <string name="insert_renwumingcheng">请输入任务名称</string>
    <string name="shoujianxiang">收件箱</string>
    <string name="fasongxiang">发送箱</string>
    <string name="youjianxiangqing">邮件详情</string>
    <string name="insertkeyword">请输入搜索的文字</string>
    <string name="selectuser">请选择用户</string>
    <string name="insertemailcontent">请输入邮件内容</string>
    <string name="notexitfile">本机不存在文件</string>
    <string name="jifenchaxun">积分查询</string>
    <string name="yuefen">月份</string>
    <string name="anxingmingchaxun">按姓名查询</string>
    <string name="suozaibumen">所在部门</string>
    <string name="xianlu">线路</string>
    <string name="tongjiquanbu">统计全部</string>
    <string name="zikonglvchaxun">自控率查询</string>
    <string name="tongjileixing">统计类型</string>
    <string name="kaishitongji">开始统计</string>
    <string name="liangweikaohe">两违考核问题自控率</string>
    <string name="jiehebu">结合部问题自控率</string>
    <string name="banzu1">班组</string>
    <string name="xingming1">姓名</string>
    <string name="duanyishangpipingjiaoyujifen">段以上批评\n教育积分</string>
    <string name="banzucheduipipingjiaoyujifen">班组/车队批\n评教育积分</string>
    <string name="lianguakaohe">联挂考核</string>
    <string name="zhijieligangpeixunjifen">直接离岗\n培训积分</string>
    <string name="zhijiediaoligongzuogangwei">直接调离\n工作岗位</string>
    <string name="benyuejifen">本月积分</string>
    <string name="jilijifen">激励积分</string>
    <string name="leijijifen">累计积分</string>
    <string name="qingshurumingcheng">请输入名称</string>
    <string name="banzuzichawentijianshu">班组自查\n问题件数</string>
    <string name="cheduizichawentijianshu">车队自查\n问题件数</string>
    <string name="duanjiyishang">段及以上检\n查问题件数</string>
    <string name="pipingjiaoyu1">批评教育问题(1~6分)</string>
    <string name="pipingjiaoyu2">批评教育问题(7~9分)</string>
    <string name="ligangpeixun">离岗培训以上问题</string>
    <string name="banzuzicha">班组自查</string>
    <string name="banzuyishangjiancha">班组以上检查</string>
    <string name="xindexiaoxi">新的消息</string>
    <string name="zhuanfa">转发</string>
    <string name="huizhi">回执</string>
    <string name="yifasong">已发送</string>
    <string name="selectanswer">请选择您的答对</string>
    <string name="yiwanchenggongzuo">本任务已完成好了</string>
    <string name="wodesuqiu">我的诉求</string>
    <string name="STR_CANCEL">取 消</string>
    <string name="STR_OK">确 认</string>
</resources>