<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rectgrayrect_layout" android:id="@+id/parent_layout">
    <RelativeLayout
            android:layout_width="1240px"
            android:layout_height="fill_parent" android:layout_marginTop="40px"
            android:layout_marginBottom="40px" android:layout_centerHorizontal="true">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100px" android:id="@+id/rlHeader" android:orientation="horizontal">
            <TextView
                    android:layout_width="200px"
                    android:layout_height="fill_parent"
                    android:id="@+id/lblCheDuiTitle" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                    android:textColor="@color/lightblue" android:textSize="@dimen/TitleFontSize" android:singleLine="true"
                    android:ellipsize="end" android:background="@drawable/rectgrayrect_layout"
                    android:text="@string/STR_CHEDUI" android:gravity="center"/>
            <TextView
                    android:layout_width="200px"
                    android:layout_height="fill_parent"
                    android:id="@+id/lblBanZuTitle" android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/lblCheDuiTitle" android:background="@drawable/rectgrayrect_layout"
                    android:textColor="@color/lightblue" android:textSize="@dimen/TitleFontSize" android:ellipsize="end"
                    android:singleLine="true" android:gravity="center" android:text="@string/banzu1"/>
            <TextView
                    android:layout_width="280px"
                    android:layout_height="fill_parent" android:background="@drawable/rectgrayrect_layout"
                    android:id="@+id/lblBanZuZiChaTitle" android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/lblBanZuTitle"
                    android:textSize="36px" android:gravity="center" android:textColor="@color/lightblue"
                    android:text="@string/banzuzichawentijianshu"/>
            <TextView
                    android:layout_width="280px"
                    android:layout_height="fill_parent" android:background="@drawable/rectgrayrect_layout"
                    android:id="@+id/lblCheDuiZiChaTitle" android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/lblBanZuZiChaTitle"
                    android:textSize="36px" android:gravity="center" android:textColor="@color/lightblue"
                    android:text="@string/cheduizichawentijianshu"/>
            <TextView
                    android:layout_width="280px"
                    android:layout_height="fill_parent" android:background="@drawable/rectgrayrect_layout"
                    android:id="@+id/lblDuanJiYiShangTitle" android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/lblCheDuiZiChaTitle"
                    android:textSize="36px" android:gravity="center" android:textColor="@color/lightblue"
                    android:text="@string/duanjiyishang"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_below="@+id/rlHeader"
                android:id="@+id/rlData" android:orientation="vertical">
            <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/scrollView">
                <LinearLayout
                        android:id="@+id/rlDataList"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

